@@ -1,36 +1,60 @@
 package io.ipgeolocation.sdk;
 
+import io.ipgeolocation.sdk.internal.Compat;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
 /**
- * Metadata extracted from IP Geolocation API response headers and SDK execution.
- *
- * @param creditsCharged parsed value of {@code X-Credits-Charged}, or {@code null} when missing
- *     or non-numeric
- * @param successfulRecords parsed value of {@code X-Successful-Record}, or {@code null} when
- *     missing or non-numeric
- * @param statusCode HTTP status code of the final response
- * @param durationMs total request duration in milliseconds
- * @param rawHeaders immutable response header map with original header names
+ * Metadata extracted from IPGeolocation API response headers and SDK execution.
  */
-public record ApiResponseMetadata(
-    Integer creditsCharged,
-    Integer successfulRecords,
-    int statusCode,
-    long durationMs,
-    Map<String, List<String>> rawHeaders) {
+public final class ApiResponseMetadata {
+  private final Integer creditsCharged;
+  private final Integer successfulRecords;
+  private final int statusCode;
+  private final long durationMs;
+  private final Map<String, List<String>> rawHeaders;
 
-  public ApiResponseMetadata {
+  public ApiResponseMetadata(
+      Integer creditsCharged,
+      Integer successfulRecords,
+      int statusCode,
+      long durationMs,
+      Map<String, List<String>> rawHeaders) {
     if (statusCode < 100 || statusCode > 599) {
       throw new IllegalArgumentException("statusCode must be between 100 and 599");
     }
     if (durationMs < 0) {
       throw new IllegalArgumentException("durationMs must be >= 0");
     }
-    rawHeaders = normalizeHeaders(rawHeaders);
+    this.creditsCharged = creditsCharged;
+    this.successfulRecords = successfulRecords;
+    this.statusCode = statusCode;
+    this.durationMs = durationMs;
+    this.rawHeaders = normalizeHeaders(rawHeaders);
+  }
+
+  public Integer creditsCharged() {
+    return creditsCharged;
+  }
+
+  public Integer successfulRecords() {
+    return successfulRecords;
+  }
+
+  public int statusCode() {
+    return statusCode;
+  }
+
+  public long durationMs() {
+    return durationMs;
+  }
+
+  public Map<String, List<String>> rawHeaders() {
+    return rawHeaders;
   }
 
   /**
@@ -41,7 +65,7 @@ public record ApiResponseMetadata(
    * @throws IllegalArgumentException when name is null or blank
    */
   public List<String> headerValues(String name) {
-    if (name == null || name.isBlank()) {
+    if (Compat.isBlank(name)) {
       throw new IllegalArgumentException("header name must not be blank");
     }
     for (Map.Entry<String, List<String>> entry : rawHeaders.entrySet()) {
@@ -50,7 +74,7 @@ public record ApiResponseMetadata(
         return entry.getValue();
       }
     }
-    return List.of();
+    return Collections.emptyList();
   }
 
   /**
@@ -67,19 +91,60 @@ public record ApiResponseMetadata(
 
   private static Map<String, List<String>> normalizeHeaders(Map<String, List<String>> headers) {
     if (headers == null || headers.isEmpty()) {
-      return Map.of();
+      return Collections.emptyMap();
     }
     Map<String, List<String>> normalized = new LinkedHashMap<>(headers.size());
-    headers.forEach(
-        (name, values) -> {
-          if (name == null) {
-            return;
-          }
-          normalized.put(name, values == null || values.isEmpty() ? List.of() : List.copyOf(values));
-        });
+    for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
+      String name = entry.getKey();
+      List<String> values = entry.getValue();
+      if (name == null) {
+        continue;
+      }
+      normalized.put(
+          name,
+          values == null || values.isEmpty()
+              ? Collections.<String>emptyList()
+              : Collections.unmodifiableList(new ArrayList<String>(values)));
+    }
     if (normalized.isEmpty()) {
-      return Map.of();
+      return Collections.emptyMap();
     }
     return Collections.unmodifiableMap(normalized);
+  }
+
+  @Override
+  public boolean equals(Object other) {
+    if (this == other) {
+      return true;
+    }
+    if (!(other instanceof ApiResponseMetadata)) {
+      return false;
+    }
+    ApiResponseMetadata that = (ApiResponseMetadata) other;
+    return statusCode == that.statusCode
+        && durationMs == that.durationMs
+        && Objects.equals(creditsCharged, that.creditsCharged)
+        && Objects.equals(successfulRecords, that.successfulRecords)
+        && Objects.equals(rawHeaders, that.rawHeaders);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(creditsCharged, successfulRecords, statusCode, durationMs, rawHeaders);
+  }
+
+  @Override
+  public String toString() {
+    return "ApiResponseMetadata{creditsCharged="
+        + creditsCharged
+        + ", successfulRecords="
+        + successfulRecords
+        + ", statusCode="
+        + statusCode
+        + ", durationMs="
+        + durationMs
+        + ", rawHeaders="
+        + rawHeaders
+        + '}';
   }
 }
